# multimobility_wrist

./: LICENSE  README.md  pyproject.toml
examples/GSD/: example_GSD2.py  example_GSD3.py  example_GSD4.py  example_GSD5.py
examples/ICD/: __init__.py  example_ICD1.py  example_ICD2.py  example_ICD3.py  example_ICD4.py  example_ICD5.py  example_ICD6.py
examples/SL/: example_SL1.py  example_SL2.py  example_SL3.py
multimob/: __init__.py
multimob/GSD/: GSD2.py  GSD3.py  GSD4.py  GSD5.py
multimob/GSD/utils/: cart_to_spher.py  cwb.py  gravity_remove_butter.py
multimob/ICD/: ICD1.py  ICD2.py  ICD3.py  ICD4.py  ICD5.py  ICD6.py
multimob/ICD/utils/: find_maxima.py  find_minima.py
multimob/SL/: SL1.py  SL2.py  SL3.py
multimob/data/: data.csv  ics.csv
multimob/utils/: GSD12_torch.py  data_loader.py
tests/: conftest.py  test_gsd.py  test_icd.py  test_sl.py
